Fix modal/form z-index bug

--- a/app/assets/stylesheets/channels.scss
+++ b/app/assets/stylesheets/channels.scss
@@ -41,6 +41,8 @@
   width: 50%;
   height: 60%;
   background: #fff;
+  position: relative;
+  z-index: 2;
   padding: 25px;
   color: #000;
   border-radius: 5px;
