--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   margin-top: -60px;
+  z-index: 2;
 }
 
  .form {
